Вложенные элементы в ToolTip

--- a/02_Элементы_управления/03_ToolTip_and_Popup/03_ToolTip_and_Popup.csproj
+++ b/02_Элементы_управления/03_ToolTip_and_Popup/03_ToolTip_and_Popup.csproj
@@ -9,7 +9,13 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <Folder Include="img\" />
+    <None Remove="img\Space.jpg" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <Resource Include="img\Space.jpg">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Resource>
   </ItemGroup>
 
 </Project>
