ListBox пример работы

--- a/02_Элементы_управления/07_ListBox/07_ListBox.csproj
+++ b/02_Элементы_управления/07_ListBox/07_ListBox.csproj
@@ -9,7 +9,17 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <Folder Include="img\" />
+    <None Remove="img\Sm1.png" />
+    <None Remove="img\Sm2.png" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <Resource Include="img\Sm1.png">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Resource>
+    <Resource Include="img\Sm2.png">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Resource>
   </ItemGroup>
 
 </Project>
