--- a/03_Основные_концепции_WPF/07_Commands/07_Commands.csproj
+++ b/03_Основные_концепции_WPF/07_Commands/07_Commands.csproj
@@ -9,7 +9,13 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <Folder Include="img\" />
+    <None Remove="img\Com1.png" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <Resource Include="img\Com1.png">
+      <CopyToOutputDirectory>Never</CopyToOutputDirectory>
+    </Resource>
   </ItemGroup>
 
 </Project>
