--- a/Проект_1/StartUpMVVM/StartUpMVVM.csproj
+++ b/Проект_1/StartUpMVVM/StartUpMVVM.csproj
@@ -14,4 +14,8 @@
     <Folder Include="Services\" />
   </ItemGroup>
 
+  <ItemGroup>
+    <PackageReference Include="FontAwesome" Version="4.7.0" />
+  </ItemGroup>
+
 </Project>
