--- a/Проект_1/StartUpMVVM/StartUpMVVM.csproj
+++ b/Проект_1/StartUpMVVM/StartUpMVVM.csproj
@@ -10,13 +10,13 @@
 
   <ItemGroup>
     <Folder Include="Data\" />
-    <Folder Include="Models\" />
     <Folder Include="Services\" />
   </ItemGroup>
 
   <ItemGroup>
     <PackageReference Include="FontAwesome" Version="4.7.0" />
     <PackageReference Include="FontAwesome5" Version="2.1.11" />
+    <PackageReference Include="OxyPlot.Wpf" Version="2.1.2" />
   </ItemGroup>
 
 </Project>
