--- a/.github/workflows/BuildTesting.yml
+++ b/.github/workflows/BuildTesting.yml
@@ -17,10 +17,10 @@ jobs:
       uses: actions/setup-dotnet@v3
       with:
         dotnet-version: 8.0.x
-        dir: ${{ './Проект_1/Проект_1.sln' }}
         
     - name: Restore dependencies
       run: dotnet restore
+      working-directory: ./Проект_1/
       
     - name: Build
       run: dotnet build -c Release --no-restore
