--- a/Проект_1/Test/WPF_TEST/WPF_TEST.csproj
+++ b/Проект_1/Test/WPF_TEST/WPF_TEST.csproj
@@ -10,6 +10,7 @@
 
   <ItemGroup>
     <PackageReference Include="MaterialDesignThemes" Version="4.9.0" />
+	<PackageReference Include="Microsoft.Xaml.Behaviors.Wpf" Version="1.1.39" />
   </ItemGroup>
 
 </Project>
