Создание инфраструктуры папок MVVM

--- a/Проект_2/FileEncryptor.WPF/FileEncryptor.WPF.csproj
+++ b/Проект_2/FileEncryptor.WPF/FileEncryptor.WPF.csproj
@@ -8,4 +8,11 @@
     <UseWPF>true</UseWPF>
   </PropertyGroup>
 
+  <ItemGroup>
+    <Folder Include="Infrastructure\Commands\Base\" />
+    <Folder Include="Services\Interfaces\" />
+    <Folder Include="ViewModels\Base\" />
+    <Folder Include="Views\Window\" />
+  </ItemGroup>
+
 </Project>
