--- a/.github/workflows/Project2_AutoCompiler.yml
+++ b/.github/workflows/Project2_AutoCompiler.yml
@@ -1,34 +1,34 @@
-name: AutoCompilerForProject2
+#name: AutoCompilerForProject2
 
-on: 
-  push:
-    branches: 
-      - main
-  pull_request:
-    branches: 
-      - main
-  
-jobs:
-  build:
-    name: Initialize build on dotNet
-
-    runs-on: windows-latest
-
-    steps:
-    - uses: actions/checkout@v3
-    - name: Setup .NET
-      uses: actions/setup-dotnet@v3
-      with:
-        dotnet-version: 7.0.x
-        
-    - name: Restore dependencies
-      run: dotnet restore
-      working-directory: ./Проект_2/
-      
-    - name: Build
-      run: dotnet build -c Release --no-restore
-      working-directory: ./Проект_2/
-      
+#on: 
+#  push:
+#    branches: 
+#      - main
+#  pull_request:
+#    branches: 
+#      - main
+#  
+#jobs:
+#  build:
+#    name: Initialize build on dotNet
+#
+#    runs-on: windows-latest
+#
+#    steps:
+#    - uses: actions/checkout@v3
+#    - name: Setup .NET
+#      uses: actions/setup-dotnet@v3
+#      with:
+#        dotnet-version: 7.0.x
+#        
+#    - name: Restore dependencies
+#      run: dotnet restore
+#      working-directory: ./Проект_2/
+#      
+#    - name: Build
+#      run: dotnet build -c Release --no-restore
+#      working-directory: ./Проект_2/
+#      
     - name: Test
       run: dotnet test --no-restore --verbosity normal
       working-directory: ./Проект_2/
