--- a/Проект_3/Bookinist/Bookinist.csproj
+++ b/Проект_3/Bookinist/Bookinist.csproj
@@ -14,4 +14,10 @@
     <Folder Include="Models\" />
   </ItemGroup>
 
+  <ItemGroup>
+    <PackageReference Include="MathCore" Version="0.0.87.2" />
+    <PackageReference Include="Microsoft.Extensions.Hosting" Version="7.0.1" />
+    <PackageReference Include="Microsoft.Xaml.Behaviors.Wpf" Version="1.1.39" />
+  </ItemGroup>
+
 </Project>
