Контейнер сервисов и точка входа

--- a/Проект_3/Bookinist/Bookinist.csproj
+++ b/Проект_3/Bookinist/Bookinist.csproj
@@ -6,6 +6,8 @@
     <Nullable>enable</Nullable>
     <ImplicitUsings>enable</ImplicitUsings>
     <UseWPF>true</UseWPF>
+    <SupportedOSPlatformVersion>7.0</SupportedOSPlatformVersion>
+	<StartupObject>Bookinist.Program</StartupObject>
   </PropertyGroup>
 
   <ItemGroup>
