--- a/Проект_3/Bookinist/Bookinist.csproj
+++ b/Проект_3/Bookinist/Bookinist.csproj
@@ -21,4 +21,10 @@
     <PackageReference Include="Microsoft.Xaml.Behaviors.Wpf" Version="1.1.39" />
   </ItemGroup>
 
+  <ItemGroup>
+    <None Update="appsettings.json">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </None>
+  </ItemGroup>
+
 </Project>
