--- a/Проект_3/Bookinist/Bookinist.csproj
+++ b/Проект_3/Bookinist/Bookinist.csproj
@@ -17,6 +17,7 @@
 
   <ItemGroup>
     <PackageReference Include="MathCore" Version="0.0.87.2" />
+    <PackageReference Include="MathCore.WPF" Version="0.0.44.7" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.InMemory" Version="7.0.11" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.Sqlite" Version="7.0.11" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.Tools" Version="7.0.11">
