--- a/Проект_5/ManageDB/ManageDB.csproj
+++ b/Проект_5/ManageDB/ManageDB.csproj
@@ -8,4 +8,8 @@
     <UseWPF>true</UseWPF>
   </PropertyGroup>
 
+  <ItemGroup>
+    <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="7.0.12" />
+  </ItemGroup>
+
 </Project>
