--- a/Projects_Examples/Проект_6/HotelReservation/HotelReservation.csproj
+++ b/Projects_Examples/Проект_6/HotelReservation/HotelReservation.csproj
@@ -8,4 +8,10 @@
     <UseWPF>true</UseWPF>
   </PropertyGroup>
 
+  <ItemGroup>
+    <PackageReference Include="Microsoft.EntityFrameworkCore" Version="7.0.12" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore.Sqlite" Version="7.0.12" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore.Sqlite.Core" Version="7.0.12" />
+  </ItemGroup>
+
 </Project>
