Тест API Мосбиржи, получение данных по индексам

--- a/Projects_Examples/Проект_7/Trading.WPF/Trading.WPF.csproj
+++ b/Projects_Examples/Проект_7/Trading.WPF/Trading.WPF.csproj
@@ -11,6 +11,7 @@
   <ItemGroup>
     <ProjectReference Include="..\Trading.Domain\Trading.Domain.csproj" />
     <ProjectReference Include="..\Trading.EntityFramework\Trading.EntityFramework.csproj" />
+    <ProjectReference Include="..\Trading.FinancialModelingPrepAPI\Trading.FinancialModelingPrepAPI.csproj" />
   </ItemGroup>
 
 </Project>
