--- a/Projects_Examples/Проект_7/Trading.WPF/appsettings.json
+++ b/Projects_Examples/Проект_7/Trading.WPF/appsettings.json
@@ -1,5 +1,6 @@
 {
   "ConnectionStrings": {
-    "sqlite": "Data Source=TradingDB.db"
+    // "sqlite": "Data Source=TradingDB.db"
+    "sqlite" : "Server=(localdb)\\mssqllocaldb;Database=TradingDB;Trusted_Connection=True;"
   }
 }
