Добавление инфраструктуры MVVM

--- a/Projects_Examples/Проект_8/ContactBook/ContactBook.csproj
+++ b/Projects_Examples/Проект_8/ContactBook/ContactBook.csproj
@@ -9,7 +9,13 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="MaterialDesignThemes" Version="4.9.0" />
+    <Folder Include="Models\" />
+    <Folder Include="Views\" />
+    <Folder Include="ViewModels\" />
+    <Folder Include="Converters\" />
+    <Folder Include="Resources\" />
+    <Folder Include="Services\" />
+    <Folder Include="Utilty\" />
   </ItemGroup>
 
 </Project>
