--- a/Projects_Examples/Проект_8/ContactBook/ContactBook.csproj
+++ b/Projects_Examples/Проект_8/ContactBook/ContactBook.csproj
@@ -10,12 +10,15 @@
 
   <ItemGroup>
     <Folder Include="Models\" />
-    <Folder Include="Views\" />
-    <Folder Include="ViewModels\" />
     <Folder Include="Converters\" />
     <Folder Include="Resources\" />
     <Folder Include="Services\" />
     <Folder Include="Utilty\" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <PackageReference Include="Material.Icons.WPF" Version="2.0.0" />
+    <PackageReference Include="MaterialDesignThemes" Version="4.9.0" />
   </ItemGroup>
 
 </Project>
